--- a/backend/.env.example
+++ b/backend/.env.example
@@ -82,3 +82,18 @@ BC_BATCH_SIZE=1000 # Number of documents to process per batch when deleting obso
 BC_ENABLE_SENTRY=false # Set to true to enable Sentry
 BC_SENTRY_DSN_BACKEND=https://your_dsn@o0.ingest.sentry.io/your_project_id # Your backend DSN (keep it secret)
 BC_SENTRY_TRACES_SAMPLE_RATE=1.0 # Tracing sample rate: 1.0 = 100%, 0.1 = 10%, 0 = disabled
+
+# Platform Information (for invoices)
+BC_PLATFORM_NAME=BookCars
+BC_PLATFORM_OIB=12345678901 # Your Croatian OIB (11 digits)
+BC_PLATFORM_ADDRESS=Ilica 123
+BC_PLATFORM_CITY=Zagreb
+BC_PLATFORM_ZIP=10000
+BC_PLATFORM_IBAN=HR1234567890123456789 # Croatian IBAN (HR + 19 digits)
+BC_PLATFORM_EMAIL=info@bookcars.hr
+
+# e-Računi Integration (Croatian Electronic Invoicing)
+BC_ERACUNI_ENABLED=false # Set to true to enable e-Računi integration
+BC_ERACUNI_API_URL=https://api.e-racuni.hr/v1 # e-Računi API URL (use production URL when ready)
+BC_ERACUNI_API_KEY=YOUR_ERACUNI_API_KEY # Your e-Računi API key
+BC_ERACUNI_COMPANY_OIB=12345678901 # Your company OIB (must match platform OIB)
