--- a/backend/package.json
+++ b/backend/package.json
@@ -39,6 +39,8 @@
     "nanoid": "^5.1.6",
     "nocache": "^4.0.0",
     "nodemailer": "^7.0.11",
+    "pdfkit": "^0.15.1",
+    "qrcode": "^1.5.4",
     "stripe": "^20.1.0",
     "validator": "^13.15.26",
     "winston": "^3.19.0"
